[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://UI.gd" id="1_3k7m2"]

[sub_resource type="LabelSettings" id="LabelSettings_1k7n8"]
font_size = 24

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_3k7m2")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = -20.0
text = "Score: 0"
label_settings = SubResource("LabelSettings_1k7n8")



[node name="GameOverPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -75.0
offset_right = 100.0
offset_bottom = 75.0
alignment = 1

[node name="GameOverLabel" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1
label_settings = SubResource("LabelSettings_1k7n8")

[node name="FinalScoreLabel" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Final Score: 0"
horizontal_alignment = 1
label_settings = SubResource("LabelSettings_1k7n8")

[node name="RestartLabel" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Press ENTER to restart"
horizontal_alignment = 1
label_settings = SubResource("LabelSettings_1k7n8")